fixing height of product title in listing page so the 4th line doesn't get cut off on the ipad

--- a/public/css/listing.css
+++ b/public/css/listing.css
@@ -111,8 +111,8 @@
 
 .product-tile .product-title{
     font-size:14px;
-    margin:15px 15px 0;
-    height:65px;
+    margin:12px 15px 0;
+    height:68px;
     overflow:hidden;
 }
 
